argocd/argocd-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
spec:
  rules:
  - host: "argocd.azaks.slv52.net"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argo-cd-argocd-server
              port:
                number: 80
  tls:
  - hosts:
      - argocd.azaks.slv52.net
    secretName: argocd-azaks-slv52-net
